# XML::TreePP Changes

2007/11/11 (0.32)
    * supports invalid xml decl quoted with single quote (thanks to xatrix)
      ex. <?xml version='1.0' encoding='windows-1250'?>
      http://rt.cpan.org/Public/Bug/Display.html?id=30187

2007/09/22 (0.31)
    * "]]>" in CDATA must be separated into "<![CDATA[]]]]><![CDATA[>]]>"
      http://www.w3.org/TR/REC-xml/#sec-cdata-sect
    * utf8_flag option requires Perl 5.8.1
    * avoid "Wide character in print at" in writefile()

2007/08/27 (0.29)
    * 34_utf8_flag.t skips all tests on Perl 5.8.0
      utf8::is_utf8() wasn't there in 5.8.0.
      http://www.nntp.perl.org/group/perl.perl5.changes/2003/08/msg8628.html
    * 34_utf8_flag.t passes all tests on Perl 5.8.1-2
      http://rt.perl.org/rt3/Public/Bug/Display.html?id=24846
    * avoid "Use of uninitialized value in substitution" in xml_escape

2007/08/13 (0.27)
    * bug fix: autoload Encode.pm on particular environment, $] == 5.008
      http://www.nntp.perl.org/group/perl.cpan.testers/2007/08/msg557739.html
      http://www.nntp.perl.org/group/perl.cpan.testers/2007/08/msg557741.html
    * pod revised. OPTIONS FOR PARSING/WRITING sections are separated.

2007/08/07 (0.26)
    * new option: force_array => '*' means every elements (thanks to Niek)
    * new option: force_hash => [], and also '*' means every elements
    * new option: elem_class => 'class'
    * new tests: t/35_force_hash.t t/36_elem_class.t

2007/07/28 (0.22)
    * new option: ident => 2 (thanks to Aaron)
    * new option: utf8_flag => 1
    * new option: base_class => 'class'
    * new tests: t/32_base_class.t t/33_indent.t t/34_utf8_flag.t
    * LICENSE field added in META.yml

2007/07/25 (0.21)
    * bug fix: use_ixhash missing order on elements with attribute(s)

2007/07/22 (0.20)
    * new option: http_lite => HTTP::Lite->new()
    * new option: lwp_useragent => LWP::UserAgent->new() (thanks to NEELY)
      http://rt.cpan.org/Ticket/Display.html?id=28167