@@ -355,7 +355,7 @@ AUTHOR
     Yusuke Kawasaki, http://www.kawa.net/
 
 COPYRIGHT AND LICENSE
-    Copyright (c) 2006-2007 Yusuke Kawasaki. All rights reserved. This
+    Copyright (c) 2006-2008 Yusuke Kawasaki. All rights reserved. This
     program is free software; you can redistribute it and/or modify it under
     the same terms as Perl itself.
 
