@@ -9,7 +9,10 @@ doit () {
     $* || die "[ERROR:$?]"
 }
 
-doit wget -O t/example/index.rdf http://www.kawa.net/rss/index-e.rdf
+rdf=t/example/index.rdf
+doit wget -O $rdf~ http://www.kawa.net/rss/index-e.rdf
+diff $rdf $rdf~ > /dev/null || doit /bin/mv -f $rdf~ $rdf
+/bin/rm -f $rdf~
 
 egrep -v '^t/.*\.t$' MANIFEST > MANIFEST~
 ls t/*.t >> MANIFEST~
@@ -23,9 +26,13 @@ doit make disttest
 
 main=`grep 'lib/.*pm$' < MANIFEST | head -1`
 [ "$main" == "" ] && die "main module is not found in MANIFEST"
-doit pod2text $main > README
+doit pod2text $main > README~
+diff README README~ > /dev/null || doit /bin/mv -f README~ README
+/bin/rm -f README~
 
 doit make dist
-doit /bin/rm -fr blib pm_to_blib
+[ -d blib ] && doit /bin/rm -fr blib
+[ -f pm_to_blib ] && doit /bin/rm -f pm_to_blib
+[ -f Makefile.old ] && doit /bin/rm -f Makefile.old
 
 ls -lt *.tar.gz | head -1
