@@ -1,6 +1,6 @@
 # ----------------------------------------------------------------
     use strict;
-    use Test::More tests => 9;
+    use Test::More tests => 15;
     BEGIN { use_ok('XML::TreePP') };
 # ----------------------------------------------------------------
     my $FILES = [qw(
@@ -8,6 +8,9 @@
         t/example/hello-en-nodecl.xml
         t/example/hello-en-noenc.xml
         t/example/hello-en-latin1.xml
+        t/example/hello-en-utf8-bom.xml
+        t/example/hello-en-nodecl-bom.xml
+        t/example/hello-en-noenc-bom.xml
     )];
     &test_main();
 # ----------------------------------------------------------------
@@ -17,9 +20,9 @@ sub test_main {
     foreach my $file ( @$FILES ) {
         my $tree = $tpp->parsefile( $file );
         if ( defined $prev ) {
-            is( $tree->{root}->{text}, $prev, $file );
+            is( $tree->{root}->{text}, $prev, "same ".$file );
         } else {
-            like( $tree->{root}->{text}, qr/\S\!/, $file );
+            like( $tree->{root}->{text}, qr/^Hello, World\!\s\S{4}/, "first ".$file );
             $prev = $tree->{root}->{text};
         }
         my $xml = $tpp->write( $tree );
