@@ -1,3 +1,3 @@
-<root lang="latin">
+﻿<root lang="latin">
   <text>Hello, World! §±×÷</text>
 </root>
