@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" ?>
 <root lang="latin">
   <text>Hello, World! §±×÷</text>
 </root>
