@@ -1,5 +1,11 @@
 # XML::TreePP Changes
 
+2008/01/05 (0.33)
+    * Subversion on Google Code
+      http://xml-treepp.googlecode.com/svn/trunk/XML-TreePP/
+    * supports UTF-8 with BOM when parsing XML
+      http://www.kawa.net/works/perl/feedpp/feedpp.html#com-2008-01-03T15:02:56Z
+
 2007/11/11 (0.32)
     * supports invalid xml decl quoted with single quote (thanks to xatrix)
       ex. <?xml version='1.0' encoding='windows-1250'?>
